--- a/index.html
+++ b/index.html
@@ -9,83 +9,102 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+        integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>WEBSTUDIO</title>
 </head>
 
 <body>
     <header>
-        <nav class="menu">
-            <a class="logo" href="./index.html">Web<span class="span-logo">Studio</span></a>
-            <ul>
-                <li><a class="menu-item" href="./index.html">Studio</a></li>
-                <li><a class="menu-item" href="">Portfolio</a></li>
-                <li><a class="menu-item" href="">Contacts</a></li>
-            </ul>
-        </nav>
-        <address class="contact">
-            <ul>
-                <li><a class="contact-item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="contact-item" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+        <div class="container header">
+            <nav class="menu">
+                <a class="logo" href="./index.html">Web<span class="span-logo">Studio</span></a>
+                <ul>
+                    <li><a class="menu-item" href="./index.html">Studio</a></li>
+                    <li><a class="menu-item" href="">Portfolio</a></li>
+                    <li><a class="menu-item" href="">Contacts</a></li>
+                </ul>
+            </nav>
+            <address class="contact">
+                <ul>
+                    <li><a class="contact-item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="contact-item" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
     <main>
         <section class="hero">
-            <h1 class="hero-title">Effective Solutions
-                for Your Business</h1>
-            <button class="hero-btn" type="button">Order Service</button>
+            <div class="hero-container">
+                <h1 class="hero-title">Effective Solutions
+                    for Your Business</h1>
+                <button class="hero-btn" type="button">Order Service</button>
+            </div>
+
         </section>
+
         <section class="features">
-            <h2 class="title">Features</h2>
-            <ul>
-                <li class="features-item">
-                    <h3 class="features-title">Strategy</h3>
-                    <p class="features-text">Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution. </p>
-                </li>
-                <li class="features-item">
-                    <h3 class="features-title">Punctuality</h3>
-                    <p class="features-text">Bring the key message to the brand's audience for the best price within the
-                        shortest possible
-                        time.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="features-title">Diligence</h3>
-                    <p class="features-text">Research and confirm brands with the strongest digital growth opportunities
-                        and minimize risk.
-                    </p>
-                </li>
-                <li class="features-item">
-                    <h3 class="features-title">Technologies</h3>
-                    <p class="features-text">Design practice focused on digital experiences. We bring forth a deep
-                        passion for
-                        problem-solving.
-                    </p>
-                </li>
-            </ul>
+            <div class="container container-padding">
+                <h2 hidden class="title">Features</h2>
+                <ul class="features-list">
+                    <li class="features-item">
+                        <h3 class="features-title">Strategy</h3>
+                        <p class="features-text">Our goal is to identify the business
+                            problem to walk away with the perfect and creative solution. </p>
+                    </li>
+                    <li class="features-item">
+                        <h3 class="features-title">Punctuality</h3>
+                        <p class="features-text">Bring the key message to the brand's audience for the best price within
+                            the
+                            shortest possible
+                            time.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="features-title">Diligence</h3>
+                        <p class="features-text">Research and confirm brands with the strongest digital growth
+                            opportunities
+                            and minimize risk.
+                        </p>
+                    </li>
+                    <li class="features-item">
+                        <h3 class="features-title">Technologies</h3>
+                        <p class="features-text">Design practice focused on digital experiences. We bring forth a deep
+                            passion for
+                            problem-solving.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="team">
-            <h2 class="title">Our Team</h2>
-            <ul class="team-list">
-                <li class="team-item"><img src="./images/mark.jpg" alt="mark" width="264" height="260">
-                    <h3 class="team-title">Mark Guerrero</h3>
-                    <p class="team-text">Product Designer</p>
-                </li>
-                <li class="team-item"><img src="./images/tom.jpg" alt="tom" width="264" height="260">
-                    <h3 class="team-title">Tom Ford</h3>
-                    <p class="team-text">Frontend Developer</p>
-                </li>
-                <li class="team-item"><img src="./images/camila.jpg" alt="camila" width="264" height="260">
-                    <h3 class="team-title">Camila Garcia</h3>
-                    <p class="team-text">Marketing</p>
-                </li>
-                <li class="team-item"><img src="./images/daniel.jpg" alt="daniel" width="264" height="260">
-                    <h3 class="team-title">Daniel Wilson</h3>
-                    <p class="team-text">UI Designer</p>
-                </li>
-            </ul>
+            <div class="container container-padding">
+                <h2 class="title">Our Team</h2>
+                <ul class="team-list">
+                    <li class="team-item">
+                        <img src="./images/mark.jpg" alt="mark" width="264" height="260">
+                        <h3 class="team-title">Mark Guerrero</h3>
+                        <p class="team-text">Product Designer</p>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/tom.jpg" alt="tom" width="264" height="260">
+                        <h3 class="team-title">Tom Ford</h3>
+                        <p class="team-text">Frontend Developer</p>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/camila.jpg" alt="camila" width="264" height="260">
+                        <h3 class="team-title">Camila Garcia</h3>
+                        <p class="team-text">Marketing</p>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/daniel.jpg" alt="daniel" width="264" height="260">
+                        <h3 class="team-title">Daniel Wilson</h3>
+                        <p class="team-text">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="portfolio">
             <h2 class="title">Our Portfolio</h2>
@@ -119,7 +138,8 @@
     </main>
     <footer class="about">
         <a class="logo" href="./index.html">Web<span class="span-logo">Studio</span></a>
-        <p class="about-text">Increase the flow of customers and sales for your business with digital marketing & growth
+        <p class="about-text">Increase the flow of customers and sales for your business with digital marketing &
+            growth
             solutions.</p>
     </footer>
 </body>
