--- a/index.html
+++ b/index.html
@@ -107,40 +107,71 @@
             </div>
         </section>
         <section class="portfolio">
-            <h2 class="title">Our Portfolio</h2>
-            <ul class="portfolio-list">
-                <li><img src="./images/banking.jpg" alt="Banking App" width="360" height="300">
-                    <h3 class="portfolio-title">Banking App</h3>
-                    <p class="portfolio-text">App</p>
-                </li>
-                <li><img src="./images/cashless.jpg" alt="Cashless Payment" width="360" height="300">
-                    <h3 class="portfolio-title">Cashless Payment</h3>
-                    <p class="portfolio-text">Marketing</p>
-                </li>
-                <li><img src="./images/meditation.jpg" alt="Meditation App" width="360" height="300">
-                    <h3 class="portfolio-title">Meditation App</h3>
-                    <p class="portfolio-text">App</p>
-                </li>
-                <li><img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300">
-                    <h3 class="portfolio-title">Taxi Service</h3>
-                    <p class="portfolio-text">Marketing</p>
-                </li>
-                <li><img src="./images/screen.jpg" alt="Screen Illustrations" width="360" height="300">
-                    <h3 class="portfolio-title">Screen Illustrations</h3>
-                    <p class="portfolio-text">Design</p>
-                </li>
-                <li><img src="./images/online.jpg" alt="Online Courses" width="360" height="300">
-                    <h3 class="portfolio-title">Online Courses</h3>
-                    <p class="portfolio-text">Marketing</p>
-                </li>
-            </ul>
+            <div class="container container-padding">
+                <h2 class="title">Our Portfolio</h2>
+                <ul class="portfolio-list">
+                    <div class="portfolio-list-wrapper">
+                        <li class="portfolio-list-item"><img src="./images/banking.jpg" alt="Banking App" width="360"
+                                height="300">
+                            <div class="portfolio-list-item-wapper">
+                                <h3 class="portfolio-title">Banking App</h3>
+                                <p class="portfolio-text">App</p>
+                            </div>
+                        </li>
+                        <li class="portfolio-list-item"><img src="./images/cashless.jpg" alt="Cashless Payment"
+                                width="360" height="300">
+                            <div class="portfolio-list-item-wapper">
+                                <h3 class="portfolio-title">Cashless Payment</h3>
+                                <p class="portfolio-text">Marketing</p>
+                            </div>
+                        </li>
+                        <li class="portfolio-list-item"><img src="./images/meditation.jpg" alt="Meditation App"
+                                width="360" height="300">
+                            <div class="portfolio-list-item-wapper">
+                                <h3 class="portfolio-title">Meditation App</h3>
+                                <p class="portfolio-text">App</p>
+                            </div>
+                        </li>
+                    </div>
+                    <div class="portfolio-list-wrapper">
+                        <li class="portfolio-list-item"><img src="./images/taxi.jpg" alt="Taxi Service" width="360"
+                                height="300">
+                            <div class="portfolio-list-item-wapper">
+                                <h3 class="portfolio-title">Taxi Service</h3>
+                                <p class="portfolio-text">Marketing</p>
+                            </div>
+                        </li>
+                        <li class="portfolio-list-item"><img src="./images/screen.jpg" alt="Screen Illustrations"
+                                width="360" height="300">
+                            <div class="portfolio-list-item-wapper">
+                                <h3 class="portfolio-title">Screen Illustrations</h3>
+                                <p class="portfolio-text">Design</p>
+                            </div>
+                        </li>
+                        <li class="portfolio-list-item"><img src="./images/online.jpg" alt="Online Courses" width="360"
+                                height="300">
+                            <div class="portfolio-list-item-wapper">
+                                <h3 class="portfolio-title">Online Courses</h3>
+                                <p class="portfolio-text">Marketing</p>
+                            </div>
+                        </li>
+                    </div>
+
+                </ul>
+            </div>
+
         </section>
     </main>
     <footer class="about">
-        <a class="logo" href="./index.html">Web<span class="span-logo">Studio</span></a>
-        <p class="about-text">Increase the flow of customers and sales for your business with digital marketing &
-            growth
-            solutions.</p>
+        <div class="container">
+            <div class="about-wrapper">
+                <a class="logo" href="./index.html">Web<span class="span-logo">Studio</span></a>
+                <p class="about-text">Increase the flow of customers and sales for your business with digital marketing
+                    &
+                    growth
+                    solutions.</p>
+            </div>
+        </div>
     </footer>
 </body>
 
