--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 </head>
 
 <body>
-    <header>
+    <header class="header-main">
         <div class="container header">
             <nav class="menu">
                 <a class="logo" href="./index.html">Web<span class="span-logo">Studio</span></a>
-                <ul>
+                <ul class="menu-list">
                     <li><a class="menu-item" href="./index.html">Studio</a></li>
                     <li><a class="menu-item" href="">Portfolio</a></li>
                     <li><a class="menu-item" href="">Contacts</a></li>
@@ -110,53 +110,49 @@
             <div class="container container-padding">
                 <h2 class="title">Our Portfolio</h2>
                 <ul class="portfolio-list">
-                    <div class="portfolio-list-wrapper">
-                        <li class="portfolio-list-item"><img src="./images/banking.jpg" alt="Banking App" width="360"
-                                height="300">
-                            <div class="portfolio-list-item-wapper">
-                                <h3 class="portfolio-title">Banking App</h3>
-                                <p class="portfolio-text">App</p>
-                            </div>
-                        </li>
-                        <li class="portfolio-list-item"><img src="./images/cashless.jpg" alt="Cashless Payment"
-                                width="360" height="300">
-                            <div class="portfolio-list-item-wapper">
-                                <h3 class="portfolio-title">Cashless Payment</h3>
-                                <p class="portfolio-text">Marketing</p>
-                            </div>
-                        </li>
-                        <li class="portfolio-list-item"><img src="./images/meditation.jpg" alt="Meditation App"
-                                width="360" height="300">
-                            <div class="portfolio-list-item-wapper">
-                                <h3 class="portfolio-title">Meditation App</h3>
-                                <p class="portfolio-text">App</p>
-                            </div>
-                        </li>
-                    </div>
-                    <div class="portfolio-list-wrapper">
-                        <li class="portfolio-list-item"><img src="./images/taxi.jpg" alt="Taxi Service" width="360"
-                                height="300">
-                            <div class="portfolio-list-item-wapper">
-                                <h3 class="portfolio-title">Taxi Service</h3>
-                                <p class="portfolio-text">Marketing</p>
-                            </div>
-                        </li>
-                        <li class="portfolio-list-item"><img src="./images/screen.jpg" alt="Screen Illustrations"
-                                width="360" height="300">
-                            <div class="portfolio-list-item-wapper">
-                                <h3 class="portfolio-title">Screen Illustrations</h3>
-                                <p class="portfolio-text">Design</p>
-                            </div>
-                        </li>
-                        <li class="portfolio-list-item"><img src="./images/online.jpg" alt="Online Courses" width="360"
-                                height="300">
-                            <div class="portfolio-list-item-wapper">
-                                <h3 class="portfolio-title">Online Courses</h3>
-                                <p class="portfolio-text">Marketing</p>
-                            </div>
-                        </li>
-                    </div>
+                    <li class="portfolio-list-item"><img src="./images/banking.jpg" alt="Banking App" width="360"
+                            height="300">
+                        <div class="portfolio-list-item-wapper">
+                            <h3 class="portfolio-title">Banking App</h3>
+                            <p class="portfolio-text">App</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-list-item"><img src="./images/cashless.jpg" alt="Cashless Payment" width="360"
+                            height="300">
+                        <div class="portfolio-list-item-wapper">
+                            <h3 class="portfolio-title">Cashless Payment</h3>
+                            <p class="portfolio-text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-list-item"><img src="./images/meditation.jpg" alt="Meditation App" width="360"
+                            height="300">
+                        <div class="portfolio-list-item-wapper">
+                            <h3 class="portfolio-title">Meditation App</h3>
+                            <p class="portfolio-text">App</p>
+                        </div>
+                    </li>
 
+                    <li class="portfolio-list-item"><img src="./images/taxi.jpg" alt="Taxi Service" width="360"
+                            height="300">
+                        <div class="portfolio-list-item-wapper">
+                            <h3 class="portfolio-title">Taxi Service</h3>
+                            <p class="portfolio-text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-list-item"><img src="./images/screen.jpg" alt="Screen Illustrations"
+                            width="360" height="300">
+                        <div class="portfolio-list-item-wapper">
+                            <h3 class="portfolio-title">Screen Illustrations</h3>
+                            <p class="portfolio-text">Design</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-list-item"><img src="./images/online.jpg" alt="Online Courses" width="360"
+                            height="300">
+                        <div class="portfolio-list-item-wapper">
+                            <h3 class="portfolio-title">Online Courses</h3>
+                            <p class="portfolio-text">Marketing</p>
+                        </div>
+                    </li>
                 </ul>
             </div>
 
