--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!-- ХЕДЕР -->
     <header class="header-main">
         <div class="container header">
             <nav class="menu">
@@ -28,25 +29,26 @@
                 </ul>
             </nav>
             <address class="contact">
-                <ul>
+                <ul class="contact-list">
                     <li><a class="contact-item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a class="contact-item" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
         </div>
     </header>
+    <!-- ОСНОВНИЙ КОНТЕНТ -->
     <main>
+        <!-- ПЕРША СЕКЦІЯ -->
         <section class="hero">
-            <div class="hero-container">
+            <div class="container">
                 <h1 class="hero-title">Effective Solutions
                     for Your Business</h1>
                 <button class="hero-btn" type="button">Order Service</button>
             </div>
-
         </section>
-
+        <!-- ДРУГА СЕКЦІЯ -->
         <section class="features">
-            <div class="container container-padding">
+            <div class="wrapper container-padding">
                 <h2 hidden class="title">Features</h2>
                 <ul class="features-list">
                     <li class="features-item">
@@ -79,8 +81,9 @@
                 </ul>
             </div>
         </section>
+        <!-- ТРЕТЯ СЕКЦІЯ -->
         <section class="team">
-            <div class="container container-padding">
+            <div class="wrapper container-padding">
                 <h2 class="title">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-item">
@@ -106,8 +109,9 @@
                 </ul>
             </div>
         </section>
+        <!-- П'ЯТА СЕКЦІЯ -->
         <section class="portfolio">
-            <div class="container container-padding">
+            <div class="wrapper container-padding">
                 <h2 class="title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-list-item"><img src="./images/banking.jpg" alt="Banking App" width="360"
@@ -158,8 +162,9 @@
 
         </section>
     </main>
+    <!-- ФУТЕР -->
     <footer class="about">
-        <div class="container">
+        <div class="wrapper">
             <div class="about-wrapper">
                 <a class="logo" href="./index.html">Web<span class="span-logo">Studio</span></a>
                 <p class="about-text">Increase the flow of customers and sales for your business with digital marketing
