--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <!-- ХЕДЕР -->
     <header class="header-main">
-        <div class="container header">
+        <div class="wrapper header">
             <nav class="menu">
                 <a class="logo" href="./index.html">Web<span class="span-logo">Studio</span></a>
                 <ul class="menu-list">
