--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <!-- ХЕДЕР -->
     <header class="header-main">
-        <div class="wrapper header">
+        <div class="container header">
             <nav class="menu">
                 <a class="logo" href="./index.html">Web<span class="span-logo">Studio</span></a>
                 <ul class="menu-list">
@@ -40,7 +40,7 @@
     <main>
         <!-- ПЕРША СЕКЦІЯ -->
         <section class="hero">
-            <div class="container">
+            <div class="container wrapper">
                 <h1 class="hero-title">Effective Solutions
                     for Your Business</h1>
                 <button class="hero-btn" type="button">Order Service</button>
