--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </section>
         <!-- ДРУГА СЕКЦІЯ -->
         <section class="features">
-            <div class="wrapper container-padding">
-                <h2 hidden class="title">Features</h2>
+            <div class="container">
+                <h2 class="visually-hidden">Features</h2>
                 <ul class="features-list">
                     <li class="features-item">
                         <h3 class="features-title">Strategy</h3>
@@ -64,7 +64,7 @@
                             time.
                         </p>
                     </li>
-                    <li>
+                    <li class="features-item">
                         <h3 class="features-title">Diligence</h3>
                         <p class="features-text">Research and confirm brands with the strongest digital growth
                             opportunities
@@ -83,7 +83,7 @@
         </section>
         <!-- ТРЕТЯ СЕКЦІЯ -->
         <section class="team">
-            <div class="wrapper container-padding">
+            <div class="container container-padding">
                 <h2 class="title">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-item">
@@ -111,7 +111,7 @@
         </section>
         <!-- П'ЯТА СЕКЦІЯ -->
         <section class="portfolio">
-            <div class="wrapper container-padding">
+            <div class="container container-padding">
                 <h2 class="title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-list-item"><img src="./images/banking.jpg" alt="Banking App" width="360"
@@ -164,7 +164,7 @@
     </main>
     <!-- ФУТЕР -->
     <footer class="about">
-        <div class="wrapper">
+        <div class="container">
             <div class="about-wrapper">
                 <a class="logo" href="./index.html">Web<span class="span-logo">Studio</span></a>
                 <p class="about-text">Increase the flow of customers and sales for your business with digital marketing
