--- a/index.html
+++ b/index.html
@@ -88,23 +88,31 @@
                 <ul class="team-list">
                     <li class="team-item">
                         <img src="./images/mark.jpg" alt="mark" width="264" height="260">
-                        <h3 class="team-title">Mark Guerrero</h3>
-                        <p class="team-text">Product Designer</p>
+                        <div class="team-item-container">
+                            <h3 class="team-title">Mark Guerrero</h3>
+                            <p class="team-text">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/tom.jpg" alt="tom" width="264" height="260">
-                        <h3 class="team-title">Tom Ford</h3>
-                        <p class="team-text">Frontend Developer</p>
+                        <div class="team-item-container">
+                            <h3 class="team-title">Tom Ford</h3>
+                            <p class="team-text">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/camila.jpg" alt="camila" width="264" height="260">
-                        <h3 class="team-title">Camila Garcia</h3>
-                        <p class="team-text">Marketing</p>
+                        <div class="team-item-container">
+                            <h3 class="team-title">Camila Garcia</h3>
+                            <p class="team-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/daniel.jpg" alt="daniel" width="264" height="260">
-                        <h3 class="team-title">Daniel Wilson</h3>
-                        <p class="team-text">UI Designer</p>
+                        <div class="team-item-container">
+                            <h3 class="team-title">Daniel Wilson</h3>
+                            <p class="team-text">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
