--- a/index.html
+++ b/index.html
@@ -173,13 +173,11 @@
     <!-- ФУТЕР -->
     <footer class="about">
         <div class="container">
-            <div class="about-wrapper">
-                <a class="logo" href="./index.html">Web<span class="span-logo">Studio</span></a>
-                <p class="about-text">Increase the flow of customers and sales for your business with digital marketing
-                    &
-                    growth
-                    solutions.</p>
-            </div>
+            <a class="logo logo-footer" href="./index.html">Web<span class="span-logo">Studio</span></a>
+            <p class="about-text">Increase the flow of customers and sales for your business with digital marketing
+                &
+                growth
+                solutions.</p>
         </div>
     </footer>
 </body>
