--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main>
         <!-- ПЕРША СЕКЦІЯ -->
         <section class="hero">
-            <div class="container wrapper">
+            <div class="container hero-wrapper">
                 <h1 class="hero-title">Effective Solutions
                     for Your Business</h1>
                 <button class="hero-btn" type="button">Order Service</button>
